--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,11 @@
         android:theme="@style/Theme.PruebaIngresoMoviesWigilabs"
         tools:targetApi="31">
         <activity
-            android:name=".ui.detailmovie.DetailMovieActivity"
+            android:name=".features.detailmovie.ui.DetailMovieActivity"
             android:exported="false"
-            android:parentActivityName=".ui.movielist.MovieListActivity" />
+            android:parentActivityName=".features.movielist.ui.MovieListActivity" />
         <activity
-            android:name=".ui.movielist.MovieListActivity"
+            android:name=".features.movielist.ui.MovieListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
